Update photo paths to include 'images/' directory

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 
 <script>
   const photos = [
-    "photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg","photo5.jpg",
-    "photo6.jpg","photo7.jpg","photo8.jpg","photo9.jpg","photo10.jpg",
-    "photo11.jpeg","photo12.jpeg","photo13.jpeg"
+    "images/photo1.jpg","images/photo2.jpg","images/photo3.jpg","images/photo4.jpg","images/photo5.jpg",
+    "images/photo6.jpg","images/photo7.jpg","images/photo8.jpg","images/photo9.jpg","images/photo10.jpg",
+    "images/photo11.jpeg","images/photo12.jpeg","images/photo13.jpeg"
   ];
 
   const activeRects = [];
