--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <div class="card" id="card">
     <h1>Happy Valentine’s Day Izzi</h1>
-    <p>I love you</p>
+    <p>I Love You</p>
     <div class="sub">tap or click anywhere</div>
   </div>
 
